--- a/technoskill-workshop-BE-main/.env
+++ b/technoskill-workshop-BE-main/.env
@@ -1,5 +1,5 @@
-PGHOST='ep-hidden-forest-a1zrrid7.ap-southeast-1.aws.neon.tech'
+PGHOST='ep-lingering-violet-a1ct402q.ap-southeast-1.aws.neon.tech'
 PGDATABASE='Employee_DB'
 PGUSER='Employee_DB_owner'
-PGPASSWORD='eDf5JT4LYcal'
-ENDPOINT_ID='ep-hidden-forest-a1zrrid7'
+PGPASSWORD='biykGtv7Bp5x'
+ENDPOINT_ID='ep-lingering-violet-a1ct402q'
